<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_midsmall">

        <com.application.zimplyshop.widgets.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:text="@string/change_password" />

        <com.application.zimplyshop.widgets.CustomTextView
            android:id="@+id/cancel_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/red_text_color"
            android:textSize="@dimen/font_large" />
    </LinearLayout>
    <com.application.zimplyshop.widgets.CustomEdittext
        android:layout_width="match_parent"
        android:id="@+id/old_password"
        android:layout_marginTop="@dimen/margin_midsmall"
        android:layout_height="@dimen/z_item_height_48"
        android:textColor="@color/z_grey_color"
        android:layout_marginLeft="@dimen/margin_midsmall"
        android:layout_marginRight="@dimen/margin_midsmall"
        android:inputType="textPassword"
        android:background="@drawable/square_border_dark"
        android:paddingLeft="@dimen/margin_midsmall"
        android:paddingRight="@dimen/margin_midsmall"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/margin_medium"
        android:hint="@string/old_password" />

    <com.application.zimplyshop.widgets.CustomEdittext
        android:layout_width="match_parent"
        android:id="@+id/new_password"
        android:layout_marginTop="@dimen/margin_midsmall"
        android:layout_height="@dimen/z_item_height_48"
        android:gravity="center_vertical"
        android:textColor="@color/z_grey_color"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:layout_marginLeft="@dimen/margin_midsmall"
        android:layout_marginRight="@dimen/margin_midsmall"
        android:background="@drawable/square_border_dark"
        android:paddingLeft="@dimen/margin_midsmall"
        android:paddingRight="@dimen/margin_midsmall"
        android:paddingTop="@dimen/margin_medium"
        android:text="" />

    <com.application.zimplyshop.widgets.CustomEdittext
        android:layout_width="match_parent"
        android:id="@+id/confirm_password"
        android:layout_marginTop="@dimen/margin_midsmall"
        android:gravity="center_vertical"
        android:layout_height="@dimen/z_item_height_48"
        android:textColor="@color/z_grey_color"
        android:layout_marginLeft="@dimen/margin_midsmall"
        android:inputType="textPassword"
        android:layout_marginRight="@dimen/margin_midsmall"
        android:background="@drawable/square_border_dark"
        android:paddingLeft="@dimen/margin_midsmall"
        android:paddingRight="@dimen/margin_midsmall"
        android:paddingTop="@dimen/margin_medium"
        android:hint="@string/confirm_password" />

    <com.application.zimplyshop.widgets.CustomButton
        android:layout_width="match_parent"
        android:id="@+id/change_password"
        android:layout_height="@dimen/z_item_height_48"
        android:layout_margin="@dimen/margin_midsmall"
        android:background="@drawable/z_blue_btn_without_rad_bg"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="@dimen/font_xlarge" />

    <com.application.zimplyshop.widgets.CustomButton
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/resend_code"
        android:layout_height="@dimen/z_item_height_48"
        android:layout_margin="@dimen/margin_midsmall"
        android:background="@drawable/z_blue_btn_without_rad_bg"
        android:text="@string/retry_in"
        android:textColor="@color/white"
        android:textSize="@dimen/font_xlarge" />
</LinearLayout>